# ChangeLog for games-misc/fortune-mod-gentoo-ru
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-gentoo-ru/ChangeLog,v 1.3 2011/11/06 06:04:00 pva Exp $

*fortune-mod-gentoo-ru-0.25 (06 Nov 2011)

  06 Nov 2011; Peter Volkov <pva@gentoo.org>
  +fortune-mod-gentoo-ru-0.25.ebuild:
  Version bump wrt to slepnoga.

  05 Nov 2011; Maxim Koltsov <maksbotan@gentoo.org> metadata.xml:
  Change email of maintainer on his request

  30 Oct 2011; Peter Volkov <pva@gentoo.org>
  +fortune-mod-gentoo-ru-0.24.ebuild, +fortune-mod-gentoo-ru-9999.ebuild,
  +metadata.xml:
  Initial import from Rion overlay, thank slepnoga for this job.

*fortune-mod-gentoo-ru-0.24 (06 Sep 2011)

  06 Sep 2011; Andreis Vinogradovs <spamslepnoga@inbox.ru>
  +fortune-mod-gentoo-ru-0.24.ebuild:
  bump

  21 Aug 2011; Andreis Vinogradovs <spamslepnoga@inbox.ru>
  -fortune-mod-gentoo-ru-0.22.ebuild, fortune-mod-gentoo-ru-0.23.ebuild:
  fix typo

*fortune-mod-gentoo-ru-0.23 (25 Jul 2011)

  25 Jul 2011; Andreis Vinogradovs <spamslepnoga@inbox.ru>
  +fortune-mod-gentoo-ru-0.23.ebuild:
  bump

*fortune-mod-gentoo-ru-0.22 (18 Jun 2011)

  18 Jun 2011; Andreis Vinogradovs <spamslepnoga@inbox.ru>
  -fortune-mod-gentoo-ru-0.20.ebuild, -fortune-mod-gentoo-ru-0.21.ebuild,
  +fortune-mod-gentoo-ru-0.22.ebuild:
  drop old add mew

  06 Apr 2011; <slep@gentoo.org> -fortune-mod-gentoo-ru-0.19.ebuild:
  remove old

*fortune-mod-gentoo-ru-0.21 (06 Apr 2011)

  06 Apr 2011; <slep@gentoo.org> +fortune-mod-gentoo-ru-0.21.ebuild:
  bump

*fortune-mod-gentoo-ru-0.20 (03 Feb 2011)

  03 Feb 2011; <slep@gentoo.org> +fortune-mod-gentoo-ru-0.20.ebuild:
  bump

  21 Jan 2011; A. Vinogradov <spamslepnoga@inbox.ru>
  fortune-mod-gentoo-ru-9999.ebuild:
  fix errors for old mercurial eclass

  31 Dec 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -fortune-mod-gentoo-ru-0.16.ebuild, -fortune-mod-gentoo-ru-0.17.ebuild,
  -fortune-mod-gentoo-ru-0.18.ebuild: