@@ -6,12 +6,12 @@ DIST gentoo-ru-0.25.gz 74751 RMD160 feb0a871492db8d09476aa3bd605d97c4fe31db1 SHA
 EBUILD fortune-mod-gentoo-ru-0.24.ebuild 825 RMD160 5c8fa9cff85b7407ac09ed692915daae318601e2 SHA1 bcc83b9a7bd878ce5050af74b2569a947b3ef986 SHA256 53f639ae46b0d319a8f4501df5f503ae58a57b08543235e05de4036bebf0d0d3
 EBUILD fortune-mod-gentoo-ru-0.25.ebuild 825 RMD160 9134589a6129c19d079901cc1f46a5974ad9f60b SHA1 2c2ee40ccc63df9c07fe49ee04e1f0a6a6f289e8 SHA256 32c168c309944f3bb1d51a4350e532ffc5f848f4d51bb4c1ee4ff34ec7aa717b
 EBUILD fortune-mod-gentoo-ru-9999.ebuild 801 RMD160 a049f400e8a873b9087ba373d52c957304ad8306 SHA1 afa4f706fb7f9ee6344895c18611a788ecd468d4 SHA256 c35138dd62facc6fe19368fa88a884957f0e9ebe41de2b6cad486628c5be5390
-MISC ChangeLog 5147 RMD160 9dcc7432384f2fee71fc87e492cf957e3ff0a590 SHA1 94ba371dc65eecf87a24afb4f0dd504264a3d9ef SHA256 d6c96f89549e52028384f70dba5efa717c793dd2e2c65cbdbf7dd1e77e214ce1
-MISC metadata.xml 443 RMD160 38e7019be3718a93928928f37f1608e69d291451 SHA1 3a7a16a036e080809f77f565b5ee7ef547cc138d SHA256 29e8f59eff7e131e04a06ad2b7a6970d4f0a6e2308ad735d2e2a0b3155201698
+MISC ChangeLog 5234 RMD160 013f2a16fe7c48a712289f8d773d0c4e60ca64ab SHA1 f469e9938927ba92cd3b1c000b17dbb2f30a9c6f SHA256 b0aad504558bb616a74fe49836246858aaf2d2b85e86cf2b4807588dc43895cc
+MISC metadata.xml 511 RMD160 097c9755bc3479608dfb749cef056957ee397892 SHA1 63b2024356278fb9f7b98db4a4d9e5082f96da10 SHA256 cf6224f06bbcff7396ef62e22f9a02d43f40a1f0d946ecb4c57d0810c5e255bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk62IrIACgkQGrk+8vGYmwfFlAD/SwpC5qIuq5dKCX+eIwxZTe9z
-mHic0F+COI/ofAm3SzUBANLWTFfB4nRlJ1HD6AglfhPSTGsrb70btJpXTpPePqip
-=xpC6
+iF4EAREIAAYFAk62OlgACgkQGrk+8vGYmwdSzwD/fJ3kzfnybScDTjE9cXFAnlGb
+x2FUNO96LZBMMxGi0sEA/jDItaRIrDiveyZQsNJI4STzGQbkxbU1UjNeUTuIuiYk
+=6pCA
 -----END PGP SIGNATURE-----
