@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/fortune-mod-gentoo-ru
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-gentoo-ru/ChangeLog,v 1.3 2011/11/06 06:04:00 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-gentoo-ru/ChangeLog,v 1.4 2011/11/06 07:44:53 pva Exp $
+
+  06 Nov 2011; Peter Volkov <pva@gentoo.org> metadata.xml:
+  Add me into metadata.xml
 
 *fortune-mod-gentoo-ru-0.25 (06 Nov 2011)
 
